--- a/ihmc-avatar-interfaces/src/visualizers/resources/us/ihmc/avatar/heightMap/HeightMapParametersUI.fxml
+++ b/ihmc-avatar-interfaces/src/visualizers/resources/us/ihmc/avatar/heightMap/HeightMapParametersUI.fxml
@@ -11,9 +11,10 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.CheckBox?>
 <BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="us.ihmc.avatar.heightMap.HeightMapParametersUIController" prefHeight="300">
     <left>
-        <GridPane>
+        <GridPane vgap="3">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="149.0" />
                 <ColumnConstraints hgrow="ALWAYS" maxWidth="300.0" minWidth="10.0" />
@@ -35,9 +36,17 @@
 
             <Button onAction="#loadFile" text="Reset center" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
             <Button onAction="#export" text="Export" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
+            <Button onAction="#importHeightMap" text="Import" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
 
-            <Label text="Publish freq" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-            <Spinner fx:id="publishFreq" editable="true" prefWidth="120.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <Label text="Publish freq" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+            <Spinner fx:id="publishFreq" editable="true" prefWidth="120.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+
+            <Label text="Enable updates" GridPane.columnIndex="0" GridPane.rowIndex="8" />
+            <CheckBox fx:id="enableUpdates" prefWidth="120.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+
+            <Label text="Snap test" GridPane.columnIndex="0" GridPane.rowIndex="9" />
+            <Spinner fx:id="snapTestId" editable="true" prefWidth="120.0" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+
         </GridPane>
     </left>
     <center>
