--- a/ihmc-footstep-planning/src/visualizers/resources/us/ihmc/footstepPlanning/ui/FootstepPlannerUI.fxml
+++ b/ihmc-footstep-planning/src/visualizers/resources/us/ihmc/footstepPlanning/ui/FootstepPlannerUI.fxml
@@ -52,7 +52,13 @@
                               <fx:include fx:id="footstepPlannerLogVisualizer" source="FootstepPlannerLogVisualizer.fxml" />
                           </content>
                       </Tab>
-      
+
+                      <Tab text="Body Path Log Table">
+                          <content>
+                              <fx:include fx:id="bodyPathLogVisualizer" source="BodyPathLogVisualizer.fxml" />
+                          </content>
+                      </Tab>
+
                       <Tab text="Visualization Control">
                           <content>
                               <fx:include fx:id="visibilityGraphsUI" source="VisualizationDashboard.fxml" />
