--- a/ihmc-avatar-interfaces/src/main/resources/us/ihmc/avatar/joystickBasedJavaFXController/StepGeneratorParametersPane.fxml
+++ b/ihmc-avatar-interfaces/src/main/resources/us/ihmc/avatar/joystickBasedJavaFXController/StepGeneratorParametersPane.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -60,29 +59,30 @@
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Slider fx:id="swingHeightSlider" majorTickUnit="0.05" max="0.35" maxWidth="1.7976931348623157E308" min="0.025" minorTickCount="4" showTickLabels="true" showTickMarks="true" value="0.125" GridPane.columnIndex="5" />
+                  <Label text="Number of fixed footsteps" />
+                  <Spinner fx:id="numberOfFixedFootstepsSpinner" editable="true" GridPane.columnIndex="1" />
+                  <Label text="Turn width" GridPane.rowIndex="1" />
+                  <Spinner fx:id="turnStepWidthSpinner" editable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label text="Turn max in-angle" GridPane.rowIndex="2" />
+                  <Spinner fx:id="turnMaxAngleInwardSpinner" editable="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label text="Turn max out-angle" GridPane.rowIndex="3" />
+                  <Spinner fx:id="turnMaxAngleOutwardSpinner" editable="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label text="Max length" GridPane.columnIndex="2" />
+                  <Spinner fx:id="maxStepLengthSpinner" editable="true" GridPane.columnIndex="3" />
+                  <Label text="Default width" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Spinner fx:id="defaultStepWidthSpinner" editable="true" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                  <Label text="Min width" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Spinner fx:id="minStepWidthSpinner" editable="true" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                  <Label text="Max width" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                  <Spinner fx:id="maxStepWidthSpinner" editable="true" GridPane.columnIndex="3" GridPane.rowIndex="3" />
                   <Label text="Swing height" GridPane.columnIndex="4" />
+                  <Slider fx:id="swingHeightSlider" majorTickUnit="0.05" max="0.35" maxWidth="1.7976931348623157E308" min="0.025" minorTickCount="4" showTickLabels="true" showTickMarks="true" value="0.125" GridPane.columnIndex="5" />
                   <Label text="Swing time" GridPane.columnIndex="4" GridPane.rowIndex="1" />
                   <Slider fx:id="swingDurationSlider" blockIncrement="0.2" majorTickUnit="0.2" max="2.0" maxWidth="1.7976931348623157E308" min="0.3" showTickLabels="true" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="5" GridPane.rowIndex="1" />
                   <Label text="Transfer time" GridPane.columnIndex="4" GridPane.rowIndex="2" />
                   <Slider fx:id="transferDurationSlider" blockIncrement="0.2" majorTickUnit="0.2" max="2.0" maxWidth="1.7976931348623157E308" min="0.1" showTickLabels="true" showTickMarks="true" GridPane.columnIndex="5" GridPane.rowIndex="2" />
-                  <Label text="Default width" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <Label text="Min width" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                  <Label text="Max width" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                  <Label text="Max length" GridPane.columnIndex="2" />
-                  <Label text="Turn width" GridPane.rowIndex="1" />
-                  <Label text="Turn max in-angle" GridPane.rowIndex="2" />
-                  <Label text="Turn max out-angle" GridPane.rowIndex="3" />
-                  <Spinner fx:id="maxStepLengthSpinner" editable="true" GridPane.columnIndex="3" />
-                  <Spinner fx:id="defaultStepWidthSpinner" editable="true" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                  <Spinner fx:id="minStepWidthSpinner" editable="true" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-                  <Spinner fx:id="maxStepWidthSpinner" editable="true" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-                  <Spinner fx:id="turnStepWidthSpinner" editable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Spinner fx:id="turnMaxAngleInwardSpinner" editable="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Spinner fx:id="turnMaxAngleOutwardSpinner" editable="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <Slider fx:id="trajectoryDurationSlider" blockIncrement="0.5" majorTickUnit="1.0" max="10.0" maxWidth="1.7976931348623157E308" min="1.0" minorTickCount="4" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="5.0" GridPane.columnIndex="5" GridPane.rowIndex="3" />
                   <Label text="Trajectory time" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-                  <ToggleButton fx:id="enableTouchdownCorrectionButton" mnemonicParsing="false" text="Touchdown correction" GridPane.columnIndex="1" />
+                  <Slider fx:id="trajectoryDurationSlider" blockIncrement="0.5" majorTickUnit="1.0" max="10.0" maxWidth="1.7976931348623157E308" min="1.0" minorTickCount="4" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="5.0" GridPane.columnIndex="5" GridPane.rowIndex="3" />
                </children>
             </GridPane>
             <ImageView fx:id="controlLayoutImageView" fitHeight="227.0" fitWidth="381.0" pickOnBounds="true" preserveRatio="true">
