Tuning region calculator. Initial work on path smoothing

--- a/ihmc-footstep-planning/src/visualizers/resources/us/ihmc/footstepPlanning/ui/FootstepPlannerUI.fxml
+++ b/ihmc-footstep-planning/src/visualizers/resources/us/ihmc/footstepPlanning/ui/FootstepPlannerUI.fxml
@@ -47,7 +47,7 @@
                           </content>
                       </Tab>
       
-                      <Tab text="Log Table">
+                      <Tab text="Footstep Log Table">
                           <content>
                               <fx:include fx:id="footstepPlannerLogVisualizer" source="FootstepPlannerLogVisualizer.fxml" />
                           </content>
