--- a/ihmc-footstep-planning/src/visualizers/resources/us/ihmc/footstepPlanning/ui/VisualizationDashboard.fxml
+++ b/ihmc-footstep-planning/src/visualizers/resources/us/ihmc/footstepPlanning/ui/VisualizationDashboard.fxml
@@ -29,7 +29,7 @@
 
                 <Label text="Footstep Planner" GridPane.rowIndex="0" GridPane.columnIndex="3"/>
                 <CheckBox fx:id="showSolution" mnemonicParsing="false" selected="true" text="Show solution" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                <CheckBox fx:id="showLogGraphics" mnemonicParsing="false" text="Show log graphics" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                <CheckBox fx:id="showLogGraphics" mnemonicParsing="false" text="Show footstep log graphics" GridPane.columnIndex="3" GridPane.rowIndex="3" />
                 <CheckBox fx:id="showBodyPathLogGraphics" mnemonicParsing="false" text="Show body path log graphics" GridPane.columnIndex="3" GridPane.rowIndex="4" />
                 <CheckBox fx:id="showPostProcessingInfo" mnemonicParsing="false" selected="true" text="Show post processing info" GridPane.columnIndex="3" GridPane.rowIndex="5" />
                 <CheckBox fx:id="renderAdjustedWaypoints" mnemonicParsing="false" selected="true" text="Render adjusted waypoints" GridPane.columnIndex="3" GridPane.rowIndex="6" />
