--- a/ihmc-footstep-planning/src/visualizers/resources/us/ihmc/footstepPlanning/ui/MainTab.fxml
+++ b/ihmc-footstep-planning/src/visualizers/resources/us/ihmc/footstepPlanning/ui/MainTab.fxml
@@ -244,6 +244,9 @@
                 <GridPane alignment="TOP_CENTER" layoutX="23.0" layoutY="29.0">
                     <Button mnemonicParsing="false" onAction="#startHeightMapNavigation" prefWidth="220.0" text="Start Height Map Nav" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
                     <Button mnemonicParsing="false" onAction="#stopHeightMapNavigation" prefWidth="220.0" text="Stop Height Map Nav" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                    <Button mnemonicParsing="false" onAction="#approve" prefWidth="150.0" text="Approve" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                    <Button mnemonicParsing="false" onAction="#replan" prefWidth="150.0" text="Replan" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                    <Button mnemonicParsing="false" onAction="#writeHeightMapLog" prefWidth="150.0" text="Log" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
 
                <columnConstraints>
                   <ColumnConstraints />
