--- a/ihmc-footstep-planning/src/visualizers/resources/us/ihmc/footstepPlanning/ui/VisualizationDashboard.fxml
+++ b/ihmc-footstep-planning/src/visualizers/resources/us/ihmc/footstepPlanning/ui/VisualizationDashboard.fxml
@@ -11,7 +11,7 @@
                 <Label text="General" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
                 <CheckBox fx:id="showRobotToggleButton" mnemonicParsing="false" selected="true" text="Show robot" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                 <CheckBox fx:id="showPlanarRegionsToggleButton" mnemonicParsing="false" selected="true" text="Show planar regions" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                <CheckBox fx:id="showHeightMap" mnemonicParsing="false" selected="false" text="Show octree" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <CheckBox fx:id="showHeightMap" mnemonicParsing="false" selected="false" text="Show height map" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                 <CheckBox fx:id="showOcTreeToggleButton" mnemonicParsing="false" selected="false" text="Show octree" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                 <CheckBox fx:id="showStart" mnemonicParsing="false" selected="true" text="Show start" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                 <CheckBox fx:id="showGoal" mnemonicParsing="false" selected="true" text="Show goal" GridPane.columnIndex="1" GridPane.rowIndex="6" />
