--- a/ihmc-avatar-interfaces/src/main/resources/us/ihmc/avatar/reachabilityMap/ReachabilityMapVisualizationControlsStage.fxml
+++ b/ihmc-avatar-interfaces/src/main/resources/us/ihmc/avatar/reachabilityMap/ReachabilityMapVisualizationControlsStage.fxml
@@ -6,11 +6,14 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
 
 <Stage fx:id="stage" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
@@ -18,49 +21,111 @@
         <Scene>
             <AnchorPane>
             <children>
-               <GridPane hgap="10.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                  <columnConstraints>
-                     <ColumnConstraints hgrow="SOMETIMES" />
-                     <ColumnConstraints hgrow="SOMETIMES" />
-                     <ColumnConstraints hgrow="SOMETIMES" />
-                     <ColumnConstraints hgrow="SOMETIMES" />
-                     <ColumnConstraints hgrow="SOMETIMES" />
-                     <ColumnConstraints hgrow="SOMETIMES" />
-                  </columnConstraints>
-                  <rowConstraints>
-                     <RowConstraints vgrow="SOMETIMES" />
-                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     <RowConstraints vgrow="SOMETIMES" />
-                     <RowConstraints vgrow="SOMETIMES" />
-                     <RowConstraints vgrow="SOMETIMES" />
-                  </rowConstraints>
+               <VBox>
                   <children>
-                     <Label text="Visualization type:" />
-                     <ComboBox fx:id="visualizationTypeComboBox" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.columnSpan="3" />
-                     <Label text="Target:" GridPane.rowIndex="1" />
-                     <ComboBox fx:id="visualizationTargetComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                     <ToggleButton fx:id="normalizeDataToggleButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Normalize Data" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                     <Label text="xMin:" GridPane.rowIndex="2" />
-                     <Label text="xMax:" GridPane.rowIndex="3" />
-                     <Label text="yMin:" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                     <Label text="yMax:" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                     <Label text="zMin:" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-                     <Label text="zMax:" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-                     <Spinner editable="true" prefWidth="125.0" GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="xMinSpinner" />
-                     <Spinner editable="true" prefWidth="125.0" GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="xMaxSpinner" />
-                     <Spinner fx:id="yMinSpinner" editable="true" prefWidth="125.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-                     <Spinner fx:id="yMaxSpinner" editable="true" prefWidth="125.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-                     <Spinner fx:id="zMinSpinner" editable="true" prefWidth="125.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
-                     <Spinner fx:id="zMaxSpinner" editable="true" prefWidth="125.0" GridPane.columnIndex="5" GridPane.rowIndex="3" />
-                     <Button mnemonicParsing="false" onAction="#refreshVisualization" text="Generate Visualization" GridPane.columnIndex="5" GridPane.rowIndex="4" />
-                     <ToggleButton fx:id="heatmapToggleButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Heatmap" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-                     <Label text="Sphere scale:" GridPane.rowIndex="4" />
-                     <Spinner fx:id="scaleSpinner" editable="true" prefWidth="125.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                     <GridPane hgap="10.0" vgap="10.0">
+                        <columnConstraints>
+                           <ColumnConstraints hgrow="SOMETIMES" />
+                           <ColumnConstraints hgrow="SOMETIMES" />
+                           <ColumnConstraints hgrow="SOMETIMES" />
+                           <ColumnConstraints hgrow="SOMETIMES" />
+                           <ColumnConstraints hgrow="SOMETIMES" />
+                           <ColumnConstraints hgrow="SOMETIMES" />
+                        </columnConstraints>
+                        <rowConstraints>
+                           <RowConstraints vgrow="SOMETIMES" />
+                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           <RowConstraints vgrow="SOMETIMES" />
+                           <RowConstraints vgrow="SOMETIMES" />
+                           <RowConstraints vgrow="SOMETIMES" />
+                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        </rowConstraints>
+                        <children>
+                           <Label text="Visualization type:" />
+                           <ComboBox fx:id="visualizationTypeComboBox" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.columnSpan="3" />
+                           <Label text="Target:" GridPane.rowIndex="1" />
+                           <ComboBox fx:id="visualizationTargetComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                           <ToggleButton fx:id="normalizeDataToggleButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Normalize Data" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                           <Label text="xMin:" GridPane.rowIndex="2" />
+                           <Label text="xMax:" GridPane.rowIndex="3" />
+                           <Label text="yMin:" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                           <Label text="yMax:" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                           <Label text="zMin:" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+                           <Label text="zMax:" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+                           <Spinner editable="true" prefWidth="125.0" GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="xMinSpinner" />
+                           <Spinner editable="true" prefWidth="125.0" GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="xMaxSpinner" />
+                           <Spinner fx:id="yMinSpinner" editable="true" prefWidth="125.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                           <Spinner fx:id="yMaxSpinner" editable="true" prefWidth="125.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                           <Spinner fx:id="zMinSpinner" editable="true" prefWidth="125.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+                           <Spinner fx:id="zMaxSpinner" editable="true" prefWidth="125.0" GridPane.columnIndex="5" GridPane.rowIndex="3" />
+                           <Button mnemonicParsing="false" onAction="#refreshVisualization" text="Generate Visualization" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+                           <ToggleButton fx:id="heatmapToggleButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Heatmap" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+                           <Label text="Sphere scale:" GridPane.rowIndex="4" />
+                           <Spinner fx:id="scaleSpinner" editable="true" prefWidth="125.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                           <Spinner fx:id="payloadSpinner" editable="true" prefWidth="125.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                           <Label text="Extra payload (kg):" GridPane.rowIndex="5" />
+                        </children>
+                        <padding>
+                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        </padding>
+                     </GridPane>
+                     <HBox spacing="10.0">
+                        <children>
+                           <VBox spacing="5.0">
+                              <children>
+                                 <Label text="Joint Names:" />
+                                 <TextField fx:id="jointNameText0" editable="false" />
+                                 <TextField fx:id="jointNameText1" editable="false" />
+                                 <TextField fx:id="jointNameText2" editable="false" />
+                                 <TextField fx:id="jointNameText3" editable="false" />
+                                 <TextField fx:id="jointNameText4" editable="false" />
+                                 <TextField fx:id="jointNameText5" editable="false" />
+                                 <TextField fx:id="jointNameText6" editable="false" />
+                              </children>
+                           </VBox>
+                           <VBox spacing="5.0">
+                              <children>
+                                 <Label text="Joint Effort Max (abs):" />
+                                 <TextField fx:id="jointTauMaxText0" />
+                                 <TextField fx:id="jointTauMaxText1" />
+                                 <TextField fx:id="jointTauMaxText2" />
+                                 <TextField fx:id="jointTauMaxText3" />
+                                 <TextField fx:id="jointTauMaxText4" />
+                                 <TextField fx:id="jointTauMaxText5" />
+                                 <TextField fx:id="jointTauMaxText6" />
+                              </children>
+                           </VBox>
+                           <VBox spacing="5.0">
+                              <children>
+                                 <Label text="Joint Limit Lower:" />
+                                 <TextField fx:id="jointQMinText0" />
+                                 <TextField fx:id="jointQMinText1" />
+                                 <TextField fx:id="jointQMinText2" />
+                                 <TextField fx:id="jointQMinText3" />
+                                 <TextField fx:id="jointQMinText4" />
+                                 <TextField fx:id="jointQMinText5" />
+                                 <TextField fx:id="jointQMinText6" />
+                              </children>
+                           </VBox>
+                           <VBox spacing="5.0">
+                              <children>
+                                 <Label text="Joint Limit Upper:" />
+                                 <TextField fx:id="jointQMaxText0" />
+                                 <TextField fx:id="jointQMaxText1" />
+                                 <TextField fx:id="jointQMaxText2" />
+                                 <TextField fx:id="jointQMaxText3" />
+                                 <TextField fx:id="jointQMaxText4" />
+                                 <TextField fx:id="jointQMaxText5" />
+                                 <TextField fx:id="jointQMaxText6" />
+                              </children>
+                           </VBox>
+                        </children>
+                        <padding>
+                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        </padding>
+                     </HBox>
                   </children>
-                  <padding>
-                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                  </padding>
-               </GridPane>
+               </VBox>
             </children></AnchorPane>
         </Scene>
     </scene>
