--- a/ihmc-avatar-interfaces/src/main/resources/us/ihmc/avatar/reachabilityMap/ReachabilityMapVisualizationControlsStage.fxml
+++ b/ihmc-avatar-interfaces/src/main/resources/us/ihmc/avatar/reachabilityMap/ReachabilityMapVisualizationControlsStage.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
@@ -69,61 +68,61 @@
                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                         </padding>
                      </GridPane>
-                     <HBox spacing="10.0">
+                     <GridPane hgap="10.0" vgap="10.0">
+                       <columnConstraints>
+                         <ColumnConstraints hgrow="SOMETIMES" />
+                           <ColumnConstraints hgrow="SOMETIMES" />
+                           <ColumnConstraints hgrow="SOMETIMES" />
+                         <ColumnConstraints hgrow="SOMETIMES" />
+                       </columnConstraints>
+                       <rowConstraints>
+                         <RowConstraints vgrow="SOMETIMES" />
+                           <RowConstraints vgrow="SOMETIMES" />
+                           <RowConstraints vgrow="SOMETIMES" />
+                           <RowConstraints vgrow="SOMETIMES" />
+                           <RowConstraints vgrow="SOMETIMES" />
+                         <RowConstraints vgrow="SOMETIMES" />
+                         <RowConstraints vgrow="SOMETIMES" />
+                           <RowConstraints vgrow="SOMETIMES" />
+                       </rowConstraints>
                         <children>
-                           <VBox spacing="5.0">
-                              <children>
-                                 <Label text="Joint Names:" />
-                                 <TextField fx:id="jointNameText0" editable="false" />
-                                 <TextField fx:id="jointNameText1" editable="false" />
-                                 <TextField fx:id="jointNameText2" editable="false" />
-                                 <TextField fx:id="jointNameText3" editable="false" />
-                                 <TextField fx:id="jointNameText4" editable="false" />
-                                 <TextField fx:id="jointNameText5" editable="false" />
-                                 <TextField fx:id="jointNameText6" editable="false" />
-                              </children>
-                           </VBox>
-                           <VBox spacing="5.0">
-                              <children>
-                                 <Label text="Joint Effort Max (abs):" />
-                                 <TextField fx:id="jointTauMaxText0" />
-                                 <TextField fx:id="jointTauMaxText1" />
-                                 <TextField fx:id="jointTauMaxText2" />
-                                 <TextField fx:id="jointTauMaxText3" />
-                                 <TextField fx:id="jointTauMaxText4" />
-                                 <TextField fx:id="jointTauMaxText5" />
-                                 <TextField fx:id="jointTauMaxText6" />
-                              </children>
-                           </VBox>
-                           <VBox spacing="5.0">
-                              <children>
-                                 <Label text="Joint Limit Lower:" />
-                                 <TextField fx:id="jointQMinText0" />
-                                 <TextField fx:id="jointQMinText1" />
-                                 <TextField fx:id="jointQMinText2" />
-                                 <TextField fx:id="jointQMinText3" />
-                                 <TextField fx:id="jointQMinText4" />
-                                 <TextField fx:id="jointQMinText5" />
-                                 <TextField fx:id="jointQMinText6" />
-                              </children>
-                           </VBox>
-                           <VBox spacing="5.0">
-                              <children>
-                                 <Label text="Joint Limit Upper:" />
-                                 <TextField fx:id="jointQMaxText0" />
-                                 <TextField fx:id="jointQMaxText1" />
-                                 <TextField fx:id="jointQMaxText2" />
-                                 <TextField fx:id="jointQMaxText3" />
-                                 <TextField fx:id="jointQMaxText4" />
-                                 <TextField fx:id="jointQMaxText5" />
-                                 <TextField fx:id="jointQMaxText6" />
-                              </children>
-                           </VBox>
+                           <Label text="Joint Names:" />
+                           <Label fx:id="jointLabel0" text="Joint 0" GridPane.rowIndex="1" />
+                           <Label fx:id="jointLabel1" text="Joint 1" GridPane.rowIndex="2" />
+                           <Label fx:id="jointLabel2" text="Joint 2" GridPane.rowIndex="3" />
+                           <Label fx:id="jointLabel3" text="Joint 3" GridPane.rowIndex="4" />
+                           <Label fx:id="jointLabel4" text="Joint 4" GridPane.rowIndex="5" />
+                           <Label fx:id="jointLabel5" text="Joint 5" GridPane.rowIndex="6" />
+                           <Label fx:id="jointLabel6" text="Joint 6" GridPane.rowIndex="7" />
+                           <Label text="Joint Effort Max (abs):" GridPane.columnIndex="1" />
+                           <TextField fx:id="jointTauMaxText0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                           <TextField fx:id="jointTauMaxText1" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                           <TextField fx:id="jointTauMaxText2" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                           <TextField fx:id="jointTauMaxText3" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                           <TextField fx:id="jointTauMaxText4" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                           <TextField fx:id="jointTauMaxText5" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                           <TextField fx:id="jointTauMaxText6" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                           <Label text="Joint Limit Lower:" GridPane.columnIndex="2" />
+                           <TextField fx:id="jointQMinText0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                           <TextField fx:id="jointQMinText1" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                           <TextField fx:id="jointQMinText2" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                           <TextField fx:id="jointQMinText3" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                           <TextField fx:id="jointQMinText4" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                           <TextField fx:id="jointQMinText5" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                           <TextField fx:id="jointQMinText6" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+                           <Label text="Joint Limit Upper:" GridPane.columnIndex="3" />
+                           <TextField fx:id="jointQMaxText0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                           <TextField fx:id="jointQMaxText1" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                           <TextField fx:id="jointQMaxText2" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                           <TextField fx:id="jointQMaxText3" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                           <TextField fx:id="jointQMaxText4" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                           <TextField fx:id="jointQMaxText5" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+                           <TextField fx:id="jointQMaxText6" GridPane.columnIndex="3" GridPane.rowIndex="7" />
                         </children>
                         <padding>
                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                         </padding>
-                     </HBox>
+                     </GridPane>
                   </children>
                </VBox>
             </children></AnchorPane>
